netfivesimple/charts/dev/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netfivesample-deploy
  labels:
    app: netfivesample-app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: netfivesample-app
  template:
    metadata:
      labels:
        app: netfivesample-app
    spec:
      containers:
        - name: netfivesample-app-cn
          image: registry.gitlab.com/puksigon/netfivesimple/netfivesimple:0.1.0-alpha.17-766e2fa
          ports:
            - containerPort: 80
