netfivesimple/charts/dev/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netfivesample-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt-prod-saxnio
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app2-dev.saxnio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netfivesample-svc
                port:
                  number: 80
  tls:
    - hosts:
        - app2-dev.saxnio.com
      secretName: letcrypt-tls
